# easy_mocap

./: .travis.yml  BodyShower.cpp  CMakeLists.txt  DisjointSets.cpp  DisjointSets.h  Drawing.cpp  HsvFilter.cpp  HsvFilter.h  INSTALL  ImageAnalyzer.cpp  ImageAnalyzer.h  ImageUtils.cpp  ImageUtils.h  Movement.cpp  OrientationFinder.cpp  OrientationFinder.h  README  README.md  RTGlib.c  ScreenShot.cpp  Textures.cpp  VirtualBody.cpp  VirtualBody.h  easy_mocap_path.h.in  test.cpp
doc/: report.tex
doc/images/: times.ods
doc/videos/: out_opencv.avi  out_opengl.avi
libs/bitmap/: Bitmap.cpp  Bitmap.h
libs/glut/: glut.h
libs/rtg/: RTGlib.c  RTGlib.h
rtg/: brood.rtg  dog.rtg
rtg/gingy/: arm.rtg  forearm.rtg  head.rtg  leg.rtg  shin_left.rtg  shin_right.rtg  torso.rtg
